<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroudColor"
    android:orientation="vertical"
    tools:context="com.example.android.musicapp.paymentAvtivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/payment"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        style="@style/SoundsTextView"
        android:text="@string/payment_explain"
        android:textColor="#fff"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#fff"
        android:hint="Entre your credit card number"
        android:inputType="number"
        android:padding="5dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/purchase_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/purchase_song" />

    <TextView
        android:id="@+id/home_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/home_page"
        android:textColor="#F2C84D"
        android:textSize="40sp"
        android:textStyle="bold" />

</LinearLayout>
