<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroudColor"
    tools:context="com.example.android.musicapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha=".5"
                android:src="@drawable/music_player" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Play_list_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/play_list"
                android:textColor="#F2C84D"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/purchase_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/purchase_song"
                android:textColor="#F2C84D"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:layout_margin="10dp"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold" />
    <TextView
        style="@style/SoundsTextView"
        android:text="@string/main_activity_explain"
        android:textColor="#fff"
        android:textSize="20sp" />

</LinearLayout>
</RelativeLayout>
